# kafka-dump

./: Cargo.toml  Dockerfile  README.md  build.sh
etc/profile.d/: cargo.sh
src/: main.rs
