[package]
name = "kafka-dmp"
version = "1.0.0"
edition = "2021"
authors = ["Babar"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.28.0", features = ["ssl"] }
clap = { version = "3.2.6", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
#tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "time"] }
bincode = "2.0.0-rc.1"
snap = "1.0.5"
#openssl = "0.10.40"
#openssl-sys = "0.9.74"
#openssl = { version = "0.10.40", features = ["vendored"] }


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[[bin]]
name = "kafka-dmp"
path = "src/main.rs"