[package]
name = "kafka-dmp"
version = "1.0.0"
edition = "2021"
authors = ["Babar"]


[dependencies]
rdkafka = { version = "0.28.0", features = ["ssl"] }
clap = { version = "3.2.6", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
bincode = "2.0.0-rc.2"
snap = "1.0.5"
anyhow = "1.0.58"
flate2 = "1.0.25"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[[bin]]
name = "kafka-dmp"
path = "src/main.rs"